--- a/BokInterface/Properties/Resources.resx
+++ b/BokInterface/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="stairs1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tools\TileDataViewer\img\stairs1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stairs2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tools\TileDataViewer\img\stairs2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="django1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tools\TileDataViewer\img\django1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
