--- a/BokInterface/Properties/Resources.resx
+++ b/BokInterface/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="ice" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tools\TileDataViewer\img\ice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lava" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\tools\TileDataViewer\img\lava.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\tools\TileDataViewer\img\exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
