--- a/BokInterface/Properties/Resources.resx
+++ b/BokInterface/Properties/Resources.resx
@@ -169,4 +169,184 @@
   <data name="trinity" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\icon\trinity.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="earthly_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\earthly_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="solar_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\solar_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="speed_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\speed_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tiptoe_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\tiptoe_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="banana" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\banana.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="chocolate_banana" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\chocolate_banana.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bearnut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\bearnut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="see_all_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\see_all_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rotten_nut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\rotten_nut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="redshroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\redshroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="blueshroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\blueshroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bad_mushroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\bad_mushroom.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="drop_of_sun" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\drop_of_sun.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tomato_juice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\tomato_juice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rotten_water" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\rotten_water.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tasty_meat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\tasty_meat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="jerky" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\jerky.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="rotten_meat" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\rotten_meat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="chocolate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\chocolate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="melted_chocolate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\melted_chocolate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="chocolate_covered" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\chocolate_covered.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="deluxe_chocolate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\deluxe_chocolate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="healer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\healer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="magical_potion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\magical_potion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="antidote" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\antidote.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="elixir" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\elixir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sunblock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\sunblock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mr_rainnot" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\mr_rainnot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tonniar_rm" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\tonniar_rm.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sunny_clog" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\sunny_clog.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="warp_leaf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\warp_leaf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dark_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\dark_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\pet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="spade_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\spade_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="heart_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\heart_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="diamond_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\diamond_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="club_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\club_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="joker_emblem" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\joker_emblem.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="oak_coffin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\oak_coffin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bronze_coffin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\bronze_coffin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iron_coffin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\iron_coffin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="silver_coffin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\silver_coffin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="solar_coffin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\solar_coffin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="coffin_monster_elefan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\coffin_monster_elefan.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vampire_coffin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\vampire_coffin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iron_maiden" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\iron_maiden.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="warehouse_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\warehouse_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <!-- <data name="80fd204b455900" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\80fd204b455900.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="80fe204b455900" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\80fe204b455900.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data> -->
+  <!-- <data name="␣_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\␣_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data> -->
+  <data name="red_crystal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\red_crystal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="blue_crystal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\blue_crystal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="green_crystal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\green_crystal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="yellow_crystal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\yellow_crystal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="stone_tablet_piece" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\stone_tablet_piece.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tasty_water" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\tasty_water.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="red_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\red_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="blue_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\blue_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="green_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\green_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gray_card" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\gray_card.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
