--- a/BokInterface/Properties/Resources.resx
+++ b/BokInterface/Properties/Resources.resx
@@ -310,15 +310,15 @@
   <data name="warehouse_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok2\warehouse_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <!-- <data name="80fd204b455900" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\bok2\80fd204b455900.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="circle_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\circle_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="80fe204b455900" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\bok2\80fe204b455900.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data> -->
-  <!-- <data name="␣_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\img\bok2\␣_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data> -->
+  <data name="triangle_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\triangle_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="square_key" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\bok2\square_key.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="red_crystal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\img\bok2\red_crystal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
